Reloads original requested URL for ReloadType::DISABLE_PREVIEWS

When the user is viewing a preview page and selects "Show original",
the client asks the NavigationController to Reload(DISABLE_PREVIEWS).
It currently reloads the last committed URL which is a problem if
the preview caused a client redirect to occur so that the last
committed URL is a preview-specific URL. Really, we want to reload
the original requested URL to show the original page.

This CL update the NavigationControllerImpl::Reload() to replace
the current entry with a new entry using the original requested
URL when the ReloadType is DISABLE_PREVIEWS.

Bug: 795940
Change-Id: I4ade324bfafc339abbfdfd984e1151130759518c